# causal-inference

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-ci.yml
causal-inference/: __init__.py  difference_in_differences.py  synthetic_control.py
examples/: example.ipynb
src/causal_inference/: __init__.py  difference_in_differences.py  synthetic_control.py  utils.py
test/: test_difference_in_differences.py  test_synthetic_control.py
