[tool.ruff]
line-length = 280
target-version = "py310"
select = ["E","F","I","B","UP"]
exclude = ["build","dist",".venv","venv"]

[tool.ruff.lint.isort]
known-first-party = ["causal-inference"]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-inference"
version = "0.1.0"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "statsmodels>=0.14",  # add this
    # ...other deps
]