[tool.ruff]
line-length = 280
target-version = "py310"
select = ["E","F","I","B","UP"]
exclude = ["build","dist",".venv","venv"]

[tool.ruff.lint.isort]
known-first-party = ["causal-inference"]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-inference"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.3.2",
  "pandas>=2.3.1",
  "pytest>=8.4.1",
  "matplotlib>=3.10.5",
  "statsmodels>=0.14.5",
  "seaborn>=0.14.0",      # adjust when actual version is known
  "scikit-learn>=1.7.1"
]

[tool.setuptools.packages.find]
where = ["src"]

